# XG-CBS

./: .gitignore  CMakeLists.txt  Dockerfile  USAGE.md  requirements.txt  visualize.py
.claude/worktrees/heuristic-hamilton/: .gitignore  Dockerfile  README.md  USAGE.md  generate_map.py  visualize.py
.claude/worktrees/heuristic-hamilton/.claude/: settings.local.json
.claude/worktrees/heuristic-hamilton/envs/: intersection.yaml
.claude/worktrees/heuristic-hamilton/src/: XG-CBS.cpp
.claude/worktrees/heuristic-hamilton/study/envs/: env_4.yaml  (+1 more)
.claude/worktrees/thirsty-fermi/: run.sh  visualize.py
.claude/worktrees/thirsty-fermi/.claude/: settings.local.json
.claude/worktrees/thirsty-fermi/envs/: roadCrossing.yaml
.claude/worktrees/thirsty-fermi/includes/: ResultsWriter.h
src/: ResultsWriter.cpp  main.cpp
study/: apply_fixed_interval.py  generate_stimuli.sh
study/envs/: env_1.yaml  env_2.yaml  env_3.yaml  env_4.yaml  env_5.yaml
study/results/condition_b/env_1/: result.json
study/results/condition_b/env_4/: env.yaml  result.json
study/results/condition_b/env_5/: result.json
study/results/optimal/env_1/: result.json
study/results/optimal/env_2/: result.json
study/results/optimal/env_3/: result.json
study/results/optimal/env_4/: result.json
study/results/optimal/env_5/: env.yaml  result.json
study/results/random/env_1/: result.json
study/results/random/env_2/: env.yaml  result.json
study/results/random/env_3/: env.yaml  result.json
study/results/random/env_4/: env.yaml  result.json
study/results/random/env_5/: result.json
(+3 files in other folders)
